// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Custom fixture > globals > does not compile 1`] = `
"[31m[ERROR][39m 1 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file globals.mdx:
Details: These MDX global variables do not seem to be available in scope: unknownVariable1 unknownVariable2 unknownVariable3
[33m---[39m
"
`;

exports[`Docusaurus > v2 > does not compile - exclude versioned docs 1`] = `
"[31m[ERROR][39m 3 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file docs/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file docs/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
"
`;

exports[`Docusaurus > v2 > does not compile - only docs 1`] = `
"[31m[ERROR][39m 3 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file docs/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file docs/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
"
`;

exports[`Docusaurus > v2 > does not compile 1`] = `
"[31m[ERROR][39m 6 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file docs/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file docs/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-rc.1/api/plugins/plugin-pwa.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=123 Column=48
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-rc.1/deployment.mdx:
Details: Unexpected closing tag \`</details>\`, expected corresponding closing tag for \`<TabItem>\` (320:1-320:48)
Line=443 Column=1
[33m---[39m
Error while compiling file versioned_docs/version-2.0.0-rc.1/introduction.md:
Details: Unexpected character \`/\` (U+002F) after self-closing slash, expected \`>\` to end the tag (note: JS comments in JSX tags are not supported in MDX)
Line=57 Column=6
[33m---[39m
"
`;

exports[`Jest > v2 > does not compile - exclude versioned docs 1`] = `
"[31m[ERROR][39m 3 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/Configuration.md:
Details: Unexpected character \`-\` (U+002D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=1756 Column=44
[33m---[39m
Error while compiling file docs/GettingStarted.md:
Details: Expected a closing tag for \`</summary>\` (92:1-92:10) before the end of \`paragraph\`
Line=92 Column=1
[33m---[39m
Error while compiling file website/README.md:
Details: Unexpected character \`=\` (U+003D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=43 Column=49
[33m---[39m
"
`;

exports[`Jest > v2 > does not compile - only docs 1`] = `
"[31m[ERROR][39m 2 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/Configuration.md:
Details: Unexpected character \`-\` (U+002D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=1756 Column=44
[33m---[39m
Error while compiling file docs/GettingStarted.md:
Details: Expected a closing tag for \`</summary>\` (92:1-92:10) before the end of \`paragraph\`
Line=92 Column=1
[33m---[39m
"
`;

exports[`Jest > v2 > does not compile 1`] = `
"[31m[ERROR][39m 2 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/Configuration.md:
Details: Unexpected character \`-\` (U+002D) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=1756 Column=44
[33m---[39m
Error while compiling file docs/GettingStarted.md:
Details: Expected a closing tag for \`</summary>\` (92:1-92:10) before the end of \`paragraph\`
Line=92 Column=1
[33m---[39m
"
`;

exports[`React-Native > v2 > does not compile - exclude versioned docs 1`] = `
"[31m[ERROR][39m 28 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/_integration-with-existing-apps-java.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=267 Column=41
[33m---[39m
Error while compiling file docs/_integration-with-existing-apps-kotlin.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=268 Column=41
[33m---[39m
Error while compiling file docs/animated.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=468 Column=32
[33m---[39m
Error while compiling file docs/animatedvaluexy.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=79 Column=13
[33m---[39m
Error while compiling file docs/button.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=125 Column=16
[33m---[39m
Error while compiling file docs/flatlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=623 Column=22
[33m---[39m
Error while compiling file docs/image.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=249 Column=16
[33m---[39m
Error while compiling file docs/javascript-environment.md:
Details: Could not parse expression with acorn: Unexpected token
Line=95 Column=32
[33m---[39m
Error while compiling file docs/new-architecture-appendix.md:
Details: Could not parse expression with acorn: Unexpected token
Line=43 Column=11
[33m---[39m
Error while compiling file docs/pressable.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=170 Column=17
[33m---[39m
Error while compiling file docs/pushnotificationios.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=324 Column=204
[33m---[39m
Error while compiling file docs/scrollview.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=210 Column=15
[33m---[39m
Error while compiling file docs/sectionlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=240 Column=22
[33m---[39m
Error while compiling file docs/shadow-props.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=233 Column=17
[33m---[39m
Error while compiling file docs/switch.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=114 Column=17
[33m---[39m
Error while compiling file docs/text-style-props.md:
Details: Could not parse expression with acorn: Unexpected token
Line=899 Column=18
[33m---[39m
Error while compiling file docs/text.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=490 Column=16
[33m---[39m
Error while compiling file docs/textinput.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=594 Column=16
[33m---[39m
Error while compiling file docs/touchablewithoutfeedback.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=182 Column=20
[33m---[39m
Error while compiling file docs/transforms.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=193 Column=28
[33m---[39m
Error while compiling file docs/view.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=181 Column=20
[33m---[39m
Error while compiling file docs/virtualizedlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=428 Column=26
[33m---[39m
Error while compiling file website/architecture/render-pipeline.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=163 Column=42
[33m---[39m
Error while compiling file website/blog/2018-01-18-implementing-twitters-app-loading-animation-in-react-native.md:
Details: Expected the closing tag \`</a>\` either after the end of \`paragraph\` (78:44) or another opening tag after the start of \`paragraph\` (74:5)
Line=75 Column=3
[33m---[39m
Error while compiling file website/blog/2018-08-13-react-native-accessibility-updates.md:
Details: Could not parse expression with acorn: Unexpected character '“'
Line=113 Column=27
[33m---[39m
Error while compiling file website/contributing/how-to-open-a-pull-request.md:
Details: Unexpected character \`/\` (U+002F) before local name, expected a character that can start a name, such as a letter, \`$\`, or \`_\` (note: to create a link in MDX, use \`[text](url)\`)
Line=23 Column=17
[33m---[39m
Error while compiling file website/contributing/release-branch-cut-and-rc0.md:
Details: Expected a closing tag for \`<YOUR_MINOR_VERSION>\` (134:19-134:39) before the end of \`paragraph\`
Line=134 Column=1
[33m---[39m
Error while compiling file website/contributing/release-faq.md:
Details: Expected a closing tag for \`<COMMIT_HASH>\` (32:294-32:307) before the end of \`paragraph\`
Line=32 Column=1
[33m---[39m
"
`;

exports[`React-Native > v2 > does not compile - only docs 1`] = `
"[31m[ERROR][39m 22 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/_integration-with-existing-apps-java.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=267 Column=41
[33m---[39m
Error while compiling file docs/_integration-with-existing-apps-kotlin.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=268 Column=41
[33m---[39m
Error while compiling file docs/animated.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=468 Column=32
[33m---[39m
Error while compiling file docs/animatedvaluexy.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=79 Column=13
[33m---[39m
Error while compiling file docs/button.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=125 Column=16
[33m---[39m
Error while compiling file docs/flatlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=623 Column=22
[33m---[39m
Error while compiling file docs/image.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=249 Column=16
[33m---[39m
Error while compiling file docs/javascript-environment.md:
Details: Could not parse expression with acorn: Unexpected token
Line=95 Column=32
[33m---[39m
Error while compiling file docs/new-architecture-appendix.md:
Details: Could not parse expression with acorn: Unexpected token
Line=43 Column=11
[33m---[39m
Error while compiling file docs/pressable.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=170 Column=17
[33m---[39m
Error while compiling file docs/pushnotificationios.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=324 Column=204
[33m---[39m
Error while compiling file docs/scrollview.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=210 Column=15
[33m---[39m
Error while compiling file docs/sectionlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=240 Column=22
[33m---[39m
Error while compiling file docs/shadow-props.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=233 Column=17
[33m---[39m
Error while compiling file docs/switch.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=114 Column=17
[33m---[39m
Error while compiling file docs/text-style-props.md:
Details: Could not parse expression with acorn: Unexpected token
Line=899 Column=18
[33m---[39m
Error while compiling file docs/text.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=490 Column=16
[33m---[39m
Error while compiling file docs/textinput.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=594 Column=16
[33m---[39m
Error while compiling file docs/touchablewithoutfeedback.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=182 Column=20
[33m---[39m
Error while compiling file docs/transforms.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=193 Column=28
[33m---[39m
Error while compiling file docs/view.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=181 Column=20
[33m---[39m
Error while compiling file docs/virtualizedlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=428 Column=26
[33m---[39m
"
`;

exports[`React-Native > v2 > does not compile 1`] = `
"[31m[ERROR][39m 50 MDX files couldn't compile successfully!

[33m---[39m
Error while compiling file docs/_integration-with-existing-apps-java.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=267 Column=41
[33m---[39m
Error while compiling file docs/_integration-with-existing-apps-kotlin.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=268 Column=41
[33m---[39m
Error while compiling file docs/animated.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=468 Column=32
[33m---[39m
Error while compiling file docs/animatedvaluexy.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=79 Column=13
[33m---[39m
Error while compiling file docs/button.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=125 Column=16
[33m---[39m
Error while compiling file docs/flatlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=623 Column=22
[33m---[39m
Error while compiling file docs/image.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=249 Column=16
[33m---[39m
Error while compiling file docs/javascript-environment.md:
Details: Could not parse expression with acorn: Unexpected token
Line=95 Column=32
[33m---[39m
Error while compiling file docs/new-architecture-appendix.md:
Details: Could not parse expression with acorn: Unexpected token
Line=43 Column=11
[33m---[39m
Error while compiling file docs/pressable.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=170 Column=17
[33m---[39m
Error while compiling file docs/pushnotificationios.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=324 Column=204
[33m---[39m
Error while compiling file docs/scrollview.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=210 Column=15
[33m---[39m
Error while compiling file docs/sectionlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=240 Column=22
[33m---[39m
Error while compiling file docs/shadow-props.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=233 Column=17
[33m---[39m
Error while compiling file docs/switch.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=114 Column=17
[33m---[39m
Error while compiling file docs/text-style-props.md:
Details: Could not parse expression with acorn: Unexpected token
Line=899 Column=18
[33m---[39m
Error while compiling file docs/text.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=490 Column=16
[33m---[39m
Error while compiling file docs/textinput.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=594 Column=16
[33m---[39m
Error while compiling file docs/touchablewithoutfeedback.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=182 Column=20
[33m---[39m
Error while compiling file docs/transforms.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=193 Column=28
[33m---[39m
Error while compiling file docs/view.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=181 Column=20
[33m---[39m
Error while compiling file docs/virtualizedlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=428 Column=26
[33m---[39m
Error while compiling file website/architecture/render-pipeline.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=163 Column=42
[33m---[39m
Error while compiling file website/blog/2018-01-18-implementing-twitters-app-loading-animation-in-react-native.md:
Details: Expected the closing tag \`</a>\` either after the end of \`paragraph\` (78:44) or another opening tag after the start of \`paragraph\` (74:5)
Line=75 Column=3
[33m---[39m
Error while compiling file website/blog/2018-08-13-react-native-accessibility-updates.md:
Details: Could not parse expression with acorn: Unexpected character '“'
Line=113 Column=27
[33m---[39m
Error while compiling file website/contributing/how-to-open-a-pull-request.md:
Details: Unexpected character \`/\` (U+002F) before local name, expected a character that can start a name, such as a letter, \`$\`, or \`_\` (note: to create a link in MDX, use \`[text](url)\`)
Line=23 Column=17
[33m---[39m
Error while compiling file website/contributing/release-branch-cut-and-rc0.md:
Details: Expected a closing tag for \`<YOUR_MINOR_VERSION>\` (134:19-134:39) before the end of \`paragraph\`
Line=134 Column=1
[33m---[39m
Error while compiling file website/contributing/release-faq.md:
Details: Expected a closing tag for \`<COMMIT_HASH>\` (32:294-32:307) before the end of \`paragraph\`
Line=32 Column=1
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/_integration-with-existing-apps-java.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=267 Column=41
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/_integration-with-existing-apps-kotlin.md:
Details: Unexpected character \`5\` (U+0035) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\`
Line=268 Column=41
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/animated.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=468 Column=32
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/animatedvaluexy.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=79 Column=13
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/button.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=125 Column=16
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/flatlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=623 Column=22
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/image.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=249 Column=16
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/javascript-environment.md:
Details: Could not parse expression with acorn: Unexpected token
Line=95 Column=32
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/new-architecture-appendix.md:
Details: Could not parse expression with acorn: Unexpected token
Line=43 Column=11
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/pressable.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=170 Column=17
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/pushnotificationios.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=324 Column=204
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/scrollview.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=210 Column=15
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/sectionlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=240 Column=22
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/shadow-props.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=233 Column=17
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/switch.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=114 Column=17
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/text-style-props.md:
Details: Could not parse expression with acorn: Unexpected token
Line=899 Column=18
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/text.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=490 Column=16
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/textinput.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=594 Column=16
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/touchablewithoutfeedback.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=182 Column=20
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/transforms.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=193 Column=28
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/view.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=181 Column=20
[33m---[39m
Error while compiling file website/versioned_docs/version-0.72/virtualizedlist.md:
Details: Could not parse expression with acorn: Unexpected content after expression
Line=428 Column=26
[33m---[39m
"
`;
